--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "srsanchez", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger101", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 <title>Private service</title>
-<meta content='https://i.postimg.cc/HkjJS7b4/Screenshot-849.png' property='og:image'/>
+<meta content='https://i.postimg.cc/9MWMPzyz/Whats-App-Image-2024-07-13-at-11-40-05-PM.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -25,30 +24,30 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-I offer my sexual services, dances and erotic massages at your home, if you want to view my catalog?.</div>
+We are several girls, currently single, we are looking for friends. Do you want to see our complete catalog?.</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-Jo
+Yes
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-Ne
+No
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-Congratulations! Do you agree to respect the nude women shown below? Press "ENTER" below to make an appointment, register for free and enjoy the beautiful anal and vaginal girls waiting for you.. </div>
+¡WARNING! Do you agree to respect the women you are going to see next? If you know someone, don't tell them or spread rumors. </div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://searchfordating.com/tds/ae?tdsId=s7017yas_r&tds_campaign=s7017yas&utm_sub=opnfnl&s1=ps&utm_source=int&affid=f5ff31cb&subid={Srsanchez}&clickid={clickid}&subid2={subid2}}" class="step-btn submit-btn tr-submit-button showmail">ENTER
+<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={PennyWhite}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">I AGREE
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://video.twimg.com/ext_tw_video/1526551323147223045/pu/vid/508x856/k64RKE5mt_-cP8hL.mp4" type="video/mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/286374/1706542129/images/3_new.mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
